...
        case work = "WORK"
        case other = "OTHER"
    }

    enum Status: String, Codable, Sendable {
        case active = "ACTIVE"
        case finalized = "FINALIZED"
    }

    var id: String
    var name: String
    var description: String?
    var image: String?
...
